
	* lib/gst-plugins0.10.cygclass: Update for good .6 and bad .5.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.5 ***

	* CYGWIN-PATCHES/README:
	* configure.ac:
	* NEWS:
	Pre-release version bump to reflect numerous changes.

	* lib/svn.cygclass: SVN_TAG now accepted.
	SVN_BRANCH requires 'full' path (including branches/).

	* lib/mono.cygclass: MONO_SOURCE_TYPE defaults to tar.bz2.

	* lib/gnome.org.cygclass: Don't override preset {CVS,SVN}_URI.

	* bin/cygport.in (unpack): Handle .gem with 'gem unpack'.
	(cygautoreconf): Handle foo.out:foo.in syntax during writability check.

	* lib/gst-plugins0.10.cygclass: Accomodate farsight optional features.

	* lib/gtkmm.cygclass (gtkmm_autoreconf):
	Check for scripts dir before including.

	* lib/wxwidgets.cygclass: Default to wx-2.8.

	* lib/gst-plugins0.10.cygclass: Better accomodate external plugins.

	* lib/mono.cygclass: Don't override preset SVN_URI.
	(mono_wrapper) Fix.

	* lib/svn.cygclass: Handle SVN_URI containing trunk or branch.

	* bin/cygport.in (cygautoreconf): Assure autotool files are writable.

	* lib/kde3.cygclass: Fix SRC_URI for kdevelop-3.4.1+.

	* lib/berkdb.cygclass: Enable Tcl bindings.
	Rename devel package to libdbX.Y-devel.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/tcl.cygclass: New cygclass for Tcl modules.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install): Fix docdir.

	* lib/bzr.cygclass:
	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass: SRC_DIR hardcoded, as there can be no choice.

	* bin/prep_libtool_modules.sh: Set dependency_libs to empty.

	* lib/xfce4.cygclass: Allow SRC_URI not on xfce.org.

	* bin/doman: Accept more pre-gzipped manpages.

	* lib/gtk2-perl.cygclass: Handle module names not beginning with G.

	* lib/java.cygclass: Unset CLASSPATH to prevent Win32 Java interference.

	* bin/cygport.in (__pkg_diff): Ignore Python .egg-info files.

	* lib/zope.cygclass: Update for Python-2.5 and zope-3.4.
